--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -235,6 +235,7 @@
 
         margin: $tagMargin;
         padding: $tagPad;
+        display: block;
         position: relative;
 
         &:empty::before{ @include placeholder; }
