--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -380,7 +380,7 @@
             in "mix mode" the tags are inside the "input" element
         */
         #{ $self }__tag{
-            margin: 0;
+            margin: 0;  // a developer can choose to have automatic horizontal margin ("1ch" advised) between tags or use manual keyboard spaces
             // line-height: 1.1;
 
             > div{
