--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -3,7 +3,7 @@
     $self: &;
     $tags-border-color       : #DDD !default;
     $tags-hover-border-color : #CCC !default;
-    $tags-focus-border-color : #85C8EA !default;
+    $tags-focus-border-color : #3595f6 !default;
 
     $tagMargin               : 5px !default;
     $tag-pad                 : .3em .5em !default;
@@ -17,7 +17,6 @@
     $tag-remove-btn-bg--hover: darken($tag-remove, 8) !default;
     $tag-invalid-color       : $tag-remove !default;
     $tag-invalid-bg          : rgba($tag-remove, .5) !default;
-    $showX                   : true !default;
     $tag-inset-shadow-size   : 1.1em !default;
 
     // CSS variables
@@ -35,7 +34,7 @@
     --tag-remove-btn-bg--hover : #{$tag-remove-btn-bg--hover};
     --tag--min-width           : 1ch;
     --tag--max-width           : auto;
-
+    --loader-size              : .8em;
 
 
     @mixin placeholder( $show:true, $opacity:.5 ){
@@ -55,13 +54,17 @@
                                            var(--tag-bg)  50%,
                                            var(--tag-bg)  75%,
                                            transparent    75%,
-                                           transparent)         0/5px 5px;
+                                           transparent)   0/5px 5px;
         box-shadow: none;
         filter: brightness(.95);
     }
 
     @keyframes tags--bump{
         30% { transform: scale(1.2); }
+    }
+
+    @keyframes rotateLoader {
+        to{ transform: rotate(1turn) }
     }
 
     display       : flex;
@@ -76,7 +79,10 @@
     transition    : .1s;
 
     &:hover{ border-color:$tags-hover-border-color; }
-    &.tagify--focus{ border-color: $tags-focus-border-color; }
+    &.tagify--focus{
+      transition:0s;
+      border-color: $tags-focus-border-color;
+    }
 
     // Global "read-only" mode (no input button)
     &[readonly]{
@@ -96,6 +102,31 @@
         }
     }
 
+    &--loading{
+        #{ $self }__input{
+            &::before{ content:none; }
+            &::after{
+                content: '';
+                vertical-align: middle;
+                margin: -2px 0 -2px .5em;
+                opacity: 1;
+                width: .7em;
+                height: .7em;
+                width: var(--loader-size);
+                height: var(--loader-size);
+                border: 3px solid;
+                border-color: #EEE #BBB #888 transparent;
+                border-radius: 50%;
+                animation: rotateLoader .4s infinite linear;
+            }
+            &:empty{
+                &::after{
+                    margin-left:0;
+                }
+            }
+        }
+    }
+
     ///////////////////////////////////////////
     // Hides originals
     + input,
@@ -105,32 +136,10 @@
         display        : inline-flex;
         align-items    : center;
         margin         : $tagMargin 0 $tagMargin $tagMargin;
-      //  vertical-align : top;
         position       : relative;
         z-index        : 1;
         cursor         : default;
         transition     : .13s ease-out;
-
-        &.tagify--editable{
-            > div{
-                color : $tag-text-color--edit;
-                color : var(--tag-text-color--edit);
-
-                &::before{
-                    box-shadow: 0 0 0 2px $tag-hover inset !important;
-                    box-shadow: 0 0 0 2px var(--tag-hover) inset !important;
-                }
-            }
-
-            &.tagify--invalid{
-                > div{
-                    &::before{
-                        box-shadow: 0 0 0 2px $tag-invalid-color inset !important;
-                        box-shadow: 0 0 0 2px var(--tag-invalid-color) inset !important;
-                    }
-                }
-            }
-        }
 
         > div{  // :not([contenteditable])
             vertical-align : top;
@@ -153,6 +162,8 @@
                 vertical-align : top;
                 min-width      : var(--tag--min-width);
                 max-width      : var(--tag--max-width);
+                transition     : .8s ease, .1 color;
+
 
                 &[contenteditable]{
                     outline: none;
@@ -161,11 +172,8 @@
                     // fix: sometimes the caret after the last character wasn't visible (when setting {backspace:"edit"})
                     margin: -2px;
                     padding: 2px;
+                    max-width: 350px;
                 }
-            }
-
-            @if $showX {
-             //   padding-right:nth($tag-pad, 2) * 3;
             }
 
             &::before{
@@ -179,7 +187,7 @@
                 animation : tags--bump .3s ease-out 1;
 
                 box-shadow: 0 0 0 $tag-inset-shadow-size $tag-bg inset;
-                box-shadow: 0 0 0 var(--tag-inset-shadow-size) var(--tag-bg) inset;
+                box-shadow: 0 0 0 calc(var(--tag-inset-shadow-size)) var(--tag-bg) inset;
             }
         }
 
@@ -239,28 +247,53 @@
                 }
             }
         }
+
+        &--editable{
+            > div{
+                color : $tag-text-color--edit;
+                color : var(--tag-text-color--edit);
+
+                &::before{
+                    box-shadow: 0 0 0 2px $tag-hover inset !important;
+                    box-shadow: 0 0 0 2px var(--tag-hover) inset !important;
+                }
+            }
+
+            &.tagify--invalid{
+                > div{
+                    &::before{
+                        box-shadow: 0 0 0 2px $tag-invalid-color inset !important;
+                        box-shadow: 0 0 0 2px var(--tag-invalid-color) inset !important;
+                    }
+                }
+            }
+        }
     }
 
     &__tag__removeBtn{
         $size: 14px;
 
-        order         : 5;
-        font          : #{$size}/#{$size + 2} Serif;
-        background    : $tag-remove-btn-bg;
-        background    : var(--tag-remove-btn-bg);
-        color         : $tag-text-color;
-        color         : var(--tag-text-color);
-        width         : $size;
-        height        : $size;
-        text-align    : center;
-        border-radius : 50px;
-        cursor        : pointer;
-        margin-right  : $size/3;
-        margin-left   : -$size/3;
-        transition    : .2s ease-out;
+        order          : 5;
+        display        : inline-flex;
+        align-items    : center;
+        justify-content: center;
+        border-radius  : 50px;
+        cursor         : pointer;
+        font           : #{$size} Serif;
+        background     : $tag-remove-btn-bg;
+        background     : var(--tag-remove-btn-bg);
+        color          : $tag-text-color;
+        color          : var(--tag-text-color);
+
+        width          : $size;
+        height         : $size;
+        margin-right   : $size/3;
+        margin-left    : -$size/3;
+
+        transition     : .2s ease-out;
 
         &::after{
-            content:"\00D7";
+            content: "\00D7";
         }
 
         &:hover{
@@ -282,7 +315,6 @@
 
     &:not(#{$self}--mix){
         #{ $self }__input{
-            white-space: nowrap;
             // https://stackoverflow.com/a/13470210/104380
             br { display:none; }
             * { display:inline; white-space:nowrap; }
@@ -301,6 +333,7 @@
         padding: var(--tag-pad, $tag-pad);
         line-height: inherit;
         position: relative;
+        white-space: pre-line; // #160 Line break (\n) as delimeter
 
         &::before{ display:inline-block; width:0; }
 
@@ -342,9 +375,12 @@
         // tries to suggest the rest of the value from the first item in the whitelist which matches it
         &::after{
             content: attr(data-suggest);
+            display: inline-block;
+            white-space: pre; /* allows spaces at the beginning */
             color: $tag-text-color;
             opacity: .3;
             pointer-events:none;
+            max-width: 100px;
         }
 
         // &--invalid{
@@ -355,7 +391,7 @@
             in "mix mode" the tags are inside the "input" element
         */
         #{ $self }__tag{
-            margin: 0;
+            margin: 0;  // a developer can choose to have automatic horizontal margin ("1ch" advised) between tags or use manual keyboard spaces
             // line-height: 1.1;
 
             > div{
@@ -371,12 +407,19 @@
         }
     }
 
-    &--mix #{ $self }__input{
-        padding: $tagMargin;
-        margin: 0;
-        width: 100%;
-        height: 100%;
+    &--mix {
         line-height: 1.7;
+
+        #{ $self }__input{
+            padding: $tagMargin;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            line-height: inherit;
+
+            // no suggested-complete are shown in mix-mode while higilighting dropdown options
+            &::after{ content:none; }
+        }
     }
 
     &--select{
@@ -424,28 +467,62 @@
     // Since the dropdown is an external element, which is positioned directly on the body element
     // it cannot ingerit the CSS variables applied on the ".Tagify" element
     &__dropdown{
+        $dropdown: &;
+        $trans: .25s cubic-bezier(0,1,.5,1);
         position: absolute;
         z-index: 9999;
-        background: white;
+        margin-top: 1px;
+        overflow: hidden;
 
-        max-height: 300px;
-        overflow: auto;
-        border: 1px solid $tags-focus-border-color;
-        box-shadow: 0 2px 4px -2px rgba(black,.2);
-        box-sizing: border-box;
+        // when the dropdown shows next to the caret while typing
+        &--text{
+            box-shadow: 0 0 0 3px rgba($tags-focus-border-color, .1);
+            font-size: .9em;
+            #{$dropdown}__wrapper{
+                border-width: 1px;
+            }
+        }
 
+        &__wrapper{
+            max-height: 300px;
+            overflow: hidden;
+            background: white;
+            border: 1px solid $tags-focus-border-color;
+            border-top-width: 0;
+            box-shadow: 0 2px 4px -2px rgba(black,.2);
+           // box-sizing: border-box;
+            transition: $trans;
+            &:hover{
+                overflow: auto;
+            }
+        }
+
+        // intial state, pre-rendered
+        &--initial{
+            #{$dropdown}__wrapper{
+                max-height: 20px;
+                transform: translateY(1em);
+            }
+
+            &[placement="bottom"]{
+                #{$dropdown}__wrapper{
+                    transform: translateY(-1em);
+                }
+            }
+        }
 
         &__item{
             box-sizing: inherit;
-            padding: .35em .6em;
-            margin: 2px;
+            padding: $tag-pad;
+            margin: 1px;
             cursor: pointer;
-            border-radius: 3px;
+            border-radius: 2px;
             position: relative;
-            outline:none;
+            outline: none;
 
             &--active{
-                background:$tag-bg;
+                background: $tags-focus-border-color;
+                color: white;
             }
             &:active{
                 filter: brightness(105%);
