fixed placeholder in mix-mode not being vertically well-placed

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -370,6 +370,11 @@
             white-space: nowrap;
             pointer-events: none;
             opacity: 0;
+
+            #{ $self }--mix &{
+              position: static;
+              line-height: inherit;
+            }
         }
 
         @supports ( -moz-appearance:none ){
