--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -217,7 +217,11 @@
         }
 
         &#{ $self }{
-            &--noAnim{ animation:none; }
+            &--noAnim{
+              > div::before{
+                animation:none;
+              }
+            }
 
             &--hide{
                 width          : 0 !important;
@@ -346,7 +350,10 @@
 
         &::before{ display:inline-block; width:0; }
 
-        &:empty::before{ @include placeholder; width:auto; }
+        &:empty{
+          display: flex; // https://bugzilla.mozilla.org/show_bug.cgi?id=904846#c45
+          &::before{ @include placeholder; width:auto; }
+        }
 
         &:focus{ outline:none;
             &::before{ @include placeholder(false);
